--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,7 +6,43 @@ metadata:
   creationTimestamp: null
   name: manager-role
 rules:
-- resources:
+- apiGroups:
+  - ""
+  resources:
+  - endpoints
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - endpoints/status
+  verbs:
+  - get
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
@@ -16,7 +52,9 @@ rules:
   - patch
   - update
   - watch
-- resources:
+- apiGroups:
+  - ""
+  resources:
   - services/status
   verbs:
   - get
@@ -38,26 +76,6 @@ rules:
   - monitor.wangjl.dev.wangjl.dev
   resources:
   - turbines/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - monitor.wangjl.dev.wangjl.dev
-  resources:
-  - turbineservers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - monitor.wangjl.dev.wangjl.dev
-  resources:
-  - turbineservers/status
   verbs:
   - get
   - patch
